--- a/templates/student/uploadAssignment.html
+++ b/templates/student/uploadAssignment.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Brint Online school | Report</title>
+    <title>Brint Online school | Assignment</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -31,7 +31,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-      {% include "staff/sidebar.html" %}
+      {% include "student/sidebar.html" %}
         <div class="page">
         <!-- navbar-->
         {% include "snippets/header.html" %}
@@ -59,29 +59,27 @@
                       {% endif %}
                     <br>
                     
-              <form class="text-left form-validate" method="POST" action="{% url "UploadReportSave" %}"  enctype="multipart/form-data">
+              <form class="text-left form-validate" method="POST" action="{% url "StudentUploadAssignmentSave" %}"  enctype="multipart/form-data">
                 {% csrf_token %}
-                <input id="staff_name" type="text" hidden name="staff_name" value="{{ staff_name }}" required>
+                <input id="student_name" type="text" hidden name="student_name" value="{{ student_name }}" required>
+                <input id="student_staff" type="text" hidden name="student_staff" value="{{ student_staff }}" required>
                
                 
                 <div class="form-group-material">
-                  <label for="image" class="label-material">Report File</label>
-                  <input id="image" type="file" name="image" required data-msg="Please Select Student report"
+                  <label for="image" class="label-material">Assignment File</label>
+                  <input id="image" type="file" name="image" required data-msg="Please Select Student Assignement"
                     class="input-material">
                 </div>
 
-                  <div class="form-group-material">
+                  <!-- <div class="form-group-material">
                     <label for="student" class="label-material">Student</label>
                     <select id="student" type="text" name="student" required data-msg="Please enter Student Name"
                       class="form-control select-material">
-                      {% for stud in student %}
-                      <option value="{{ stud.admin.first_name }} {{stud.admin.last_name }}">{{ stud.admin.first_name }} {{stud.admin.last_name }}</option>
-                      {% endfor %}
                     </select>
-                  </div>
+                  </div> -->
 
                   <div class="form-group text-center">
-                    <input id="register" type="submit" value="Upload Report" class="btn btn-primary">
+                    <input id="register" type="submit" value="Upload Assignment" class="btn btn-primary">
                   </div>
               </form>
                   </div>
@@ -91,6 +89,18 @@
             </div>
             </div>
         </section>
+        <section class="container-fluid card">
+          <div class="row d-flex" style="padding: 20px;">
+              <div class="col-lg-12"  style="padding: 20px;">
+                  <div class="card"  style="padding: 20px;">
+                      <strong class="text-primary" style="font-size: 25px;">All Assignments Submitted</strong>
+                  {% for assignment in assignments %}
+                      <a href="{{assignment.assignment}}" target="_blank">View Assignment Submitted On: {{assignment.created}} For {{assignment.staff}}</a>
+                  {% endfor %}
+                  </div>
+              </div>
+          </div>
+      </section>
 
         {% include "snippets/footer.html" %}
         </div>
