--- a/templates/admin/addStaff.html
+++ b/templates/admin/addStaff.html
@@ -85,6 +85,20 @@
                         <label for="address" class="label-material">Address</label>
                       </div>
                       <div class="form-group-material">
+                        <label for="image" class="label-material">Image</label>
+                        <input id="image" type="file" name="image" required data-msg="Please Select Staff Image"
+                          class="input-material">
+                      </div>
+                      
+                <label for="gender" class="label-material">Gender</label>
+                <div class="form-group-material">
+                  <select id="gender" type="text" name="gender" required data-msg="Please enter Student Gender"
+                    class=" form-control select-material">
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                  </select>
+                </div>
+                      <div class="form-group-material">
                         <input id="link" type="text" name="link" required data-msg="Please enter Staff Meeting Link" class="input-material">
                         <label for="link" class="label-material">Link</label>
                       </div>
