--- a/templates/admin/staffFeedback.html
+++ b/templates/admin/staffFeedback.html
@@ -152,7 +152,7 @@
     %}"></script>
   <script src="{% static "dashboard/js/charts-home.js" %}"></script>
   <!-- Notifications-->
-  <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script>
+  <!-- <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script> -->
   <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger-theme-flat.js" %}">       </script>
   <script src="{% static "dashboard/js/home-premium.js" %}"> </script>
   <!-- Main File-->
