--- a/templates/staff/uploadReport.html
+++ b/templates/staff/uploadReport.html
@@ -104,7 +104,7 @@
       <script src="{% static "dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js" %}"></script>
       <script src="{% static "dashboard/js/charts-home.js" %}"></script>
       <!-- Notifications-->
-      <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script>
+      <!-- <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script> -->
       <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger-theme-flat.js" %}">       </script>
       <script src="{% static "dashboard/js/home-premium.js" %}"> </script>
       <!-- Main File-->
