--- a/templates/student/profile.html
+++ b/templates/student/profile.html
@@ -58,7 +58,7 @@
                           {% endfor %}
                       {% endif %}
                     <br>
-                    <form class="text-left form-validate" method="POST" action="{% url "EditProfileSaveStudent" %}">
+                    <form class="text-left form-validate" method="POST" action="{% url "EditProfileSaveStudent" %}" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-group-material">
                           <input id="firstname" type="text" name="firstname" value="{{ user_data.first_name }}" required data-msg="Please enter Admin Firstname" class="input-material">
@@ -125,7 +125,7 @@
       <script src="{% static "dashboard/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js" %}"></script>
       <script src="{% static "dashboard/js/charts-home.js" %}"></script>
       <!-- Notifications-->
-      <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script>
+      <!-- <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger.min.js" %}">   </script> -->
       <script src="{% static "dashboard/vendor/messenger-hubspot/build/js/messenger-theme-flat.js" %}">       </script>
       <script src="{% static "dashboard/js/home-premium.js" %}"> </script>
       <!-- Main File-->
