--- a/templates/admin/manageStaff.html
+++ b/templates/admin/manageStaff.html
@@ -45,8 +45,7 @@
         <div class="card">
           <div class="card-body">
             <div class="media align-items-center">
-              <!-- <span style="background-image: url(img/avatar-8.jpg)" class="avatar avatar-xl mr-3">
-              </span> -->
+              <span style="background-image: url({{staff.profile_pic}})" class="avatar avatar-xl mr-3"></span>
               <div class="media-body overflow-hidden">
                 <h5 class="card-text mb-0">STAFF{{ staff.admin.id }} | {{ staff.admin.first_name }} {{ staff.admin.last_name }}</h5>
                 <p class="card-text text-uppercase">{{ staff.admin.username }} | Joined {{ staff.admin.date_joined }}
