--- a/templates/staff/profile.html
+++ b/templates/staff/profile.html
@@ -58,7 +58,7 @@
                           {% endfor %}
                       {% endif %}
                     <br>
-                    <form class="text-left form-validate" method="POST" action="{% url "EditProfileSaveStaff" %}">
+                    <form class="text-left form-validate" method="POST" action="{% url "EditProfileSaveStaff" %}" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-group-material">
                           <input id="firstname" type="text" name="firstname" value="{{ user_data.first_name }}" required data-msg="Please enter Admin Firstname" class="input-material">
@@ -81,11 +81,28 @@
                             <label for="password" class="label-material">Change Password</label>
                         </div>
                         <div class="form-group-material">
-                            <input id="address" type="text" name="address" value="{{ staff.address }}" required data-msg="Please enter Staff Address" class="input-material">
+                            <input id="address" type="text" name="address" value="{{ user_data.staff.address }}" required data-msg="Please enter Staff Address" class="input-material">
                             <label for="address" class="label-material">Address</label>
                           </div>
                           <input id="Admin_id" type="hidden" name="Admin_id" value="{{ user_data.id }}" class="input-material">
-                        
+                          <div class="form-group-material">
+                            <label for="image" class="label-material">Image</label>
+                            <input id="image" type="file" name="image" required data-msg="Please Select Staff Image"
+                              class="input-material">
+                          </div>
+                          
+                        <div class="form-group-material">
+                        <label for="gender" class="label-material">Gender</label>
+                          <select id="gender" type="text" name="gender" value="{{user_data.staff.gender}}" required data-msg="Please enter Student Gender"
+                            class=" form-control select-material">
+                            <option {% if user_data.staff.gender == "Male" %} selected {% endif %} >Male</option>
+                            <option {% if user_data.staff.gender == "Female" %} selected {% endif %}>Female</option>                    
+                          </select>
+                        </div>
+                          <div class="form-group-material">
+                            <input id="link" type="text" name="link" value="{{user_data.staff.link}}" required data-msg="Please enter Staff Meeting Link" class="input-material">
+                            <label for="link" class="label-material">Link</label>
+                          </div>
                         <div class="form-group text-center">
                           <input id="register" type="submit" value="Update Staff" class="btn btn-primary">
                         </div>
